Version 1.2.0rc2:
- Configuration file security is now only checked if the file actually contains
  secrets such as passwords. (If you still store passwords in the configuration
  file, consider using the passwordeval command or a key ring instead.)
- The GSSAPI authentication method is not chosen automatically anymore, you have
  to request it manually if you really want to use it.
- GNOME Keyring support now uses libsecret instead of libgnome-keyring.
- Libidn is not required for IDN support anymore on systems where getaddrinfo()
  supports the AI_IDN flag and the GnuTLS version is >= 3.4.0.
- Support for SOCKS proxies was added. This allows mpop to be used with Tor.
- SSLv3 is disabled, and the obsolete tls_force_sslv3 command and
  --tls-force-sslv3 option have no effect anymore.

Version 1.0.29:
- No significant changes.

Version 1.0.28:
- No significant changes.

Version 1.0.27:
- No significant changes.

Version 1.0.26:
- No significant changes.

Version 1.0.25:
- DIGEST-MD5 authentication is not considered secure any longer. See RFC 6331.

Version 1.0.24:
- The build system was updated, and as a consequence some options to the
  configure script have changed. See './configure --help'.
- The license of the manual was changed from the GNU FDL to a very simple
  permissive license.
- Unmaintained translations (es, pt_BR) were removed.

Version 1.0.23:
- No significant changes.

Version 1.0.22:
- A new command 'received_header' with a corresponding '--received-header'
  option allows to disable the default Received header if required.
- A new command 'passwordeval' with a corresponding '--passwordeval' option
  allows to set the password to the output of a command.

Version 1.0.21:
- No significant changes.

Version 1.0.20:
- Added support for authentication mechanism SCRAM-SHA-1 via GNU SASL.
- The new command tls_fingerprint allows one to trust one particular TLS
  certificate, in case tls_trust_file cannot be used for some reason.