@@ -860,11 +860,17 @@ is on your platform). If that fails, it will try to get it from a system
 specific keyring (if available). If that fails, mpop will prompt you for it.
 
 Currently supported keyrings are the Gnome Keyring and the Mac OS X Keychain.
-The script @code{mpop-gnome-tool.py} can be used to manage Gnome Keyring
-passwords for mpop. To manage Mac OS X Keychain passwords, use the Keychain
-Access GUI application. The @samp{account name} is same as the mpop @samp{user}
-argument. The @samp{keychain item name} is @code{pop3://<hostname>} where
-@code{<hostname>} matches the mpop @samp{host} argument.
+
+The command @samp{secret-tool} (part of Gnome's libsecret) can be used to manage
+Gnome Keyring passwords for mpop. For that purpose, specify the attributes
+"user" (user name), "protocol" (always "pop3"), and "server" (name of the POP3
+server). You can also use @samp{secret-tool} via the @samp{passwordeval} command
+if your version of mpop does not have builtin support for libsecret.
+
+To manage Mac OS X Keychain passwords, use the Keychain Access GUI application.
+The @samp{account name} is same as the mpop @samp{user} argument. The
+@samp{keychain item name} is @code{smtp://<hostname>} where @code{<hostname>}
+matches the mpop @samp{host} argument.
 
 The authentication method can be chosen with the @samp{auth} command or 
 @samp{--auth} option, but it is usually sufficient to just use the @samp{on} 
