@@ -1,5 +1,3 @@
 EXTRA_DIST = \
-	vim/README				\
-	vim/mpop.vim				\
-	mpop-gnome-tool/README			\
-	mpop-gnome-tool/mpop-gnome-tool.py
+	vim/README \
+	vim/mpop.vim
