@@ -1,1 +1,0 @@
-This script manages Gnome Keyring passwords for mpop.
